k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magisterka-ingress
  namespace: magisterka
  labels:
    app: magisterka
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: cpu-magisterka.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpu-service
                port:
                  number: 80
    - host: io-magisterka.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: io-service
                port:
                  number: 80
